--- a/movie.css
+++ b/movie.css
@@ -290,20 +290,17 @@ h1 {
 
 #social-links a {
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 50%;
     text-decoration: none;
-    font-weight: bold;
-    font-size: 1rem;
 }
 
-#social-links a:hover {
-    background-color: #555;
+#social-links img {
+    width: 30px;
+    height: 30px;
+    display: block;
+}
+
+#social-links a:hover img {
+    opacity: 0.7;
 }
 
 #watch-trailer {
@@ -341,4 +338,9 @@ h1 {
     bottom: 50px; /* Moved up slightly to avoid footer */
     right: 10px;
     opacity: 0.8;
+}
+
+#validators img {
+    width: 88px;
+    height: 31px;
 }
